# screen-chatbot

./: .gitignore  README.md  env.txt  pyproject.toml
screen_chatbot/: multi_to_audio.py  multi_to_text.py
src/: live_stream_audio.py  live_stream_text.py  stream_to_text.py
